<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="P_CP1_Check" Id="{3065913d-6b79-4f5a-bac4-18ef0f6d8554}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_CP1_Check
VAR_INPUT
	n_Step: INT := 0;	
	b_set_run : BOOL;
	b_check_mode_on : BOOL;
	t_check_duration :TIME;
END_VAR
VAR
	//
	// BOOL 
	b_Condition: BOOL;
	b_No_Emergency_Stop:BOOL :=TRUE;
	
	//
	// Timer 
	t_CP1_Check_Time: TON;
	//
	t_CP1_Puls_Enable: TON;	
	t_CP1_Puls_Disable: TON;	
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building HIF E26, Laura-Hezner-Weg 7, CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Digital Casting System 
// FUNCTION    :  Step chain for Concrete pump calibration
// AUTHOR      :  Weiting Chen
// EMAIL       :  chenw@usi.ch
// Copyright   :  USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2023
// Contributor :  Philippe Fleischmann
//
// ***********************************************************************************

// Ignore emergency stop
b_No_Emergency_Stop:=TRUE;

//
// Initalization
IF n_Step=0 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=10;
	END_IF
END_IF

//
// Check grid mounted and no errors and the check mode on 
IF n_Step=10 THEN
	//
	// Check condition 
	b_Condition:= GVL_IO.ib_CP1_Ready AND GVL_IO.ib_CP1_Safety_Grid_Mounted AND NOT GVL_IO.ib_CP1_Drive_Error;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=20;
	END_IF
END_IF

//
// Send enable to pump and wait for start 
IF n_Step=20 THEN
	//
	// Check condition 
	b_Condition:= b_check_mode_on AND b_set_run;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=25;
	END_IF
END_IF

//
// Pump enabled checking for errors or grid removed
IF n_Step=25 THEN
	//
	// Check condition 
	b_Condition:= t_CP1_Check_Time.Q;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=30;
	END_IF
END_IF

//
// Pump enabled checking for errors or grid removed
IF n_Step=30 THEN
	//
	// Check condition 
	b_Condition:= TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=40;
	END_IF
END_IF

//
// 
IF n_Step=40 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=50;
	END_IF
END_IF

//
// Return to step 10 
IF n_Step=50 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		//
		//Reset 
		b_set_run:=FALSE;
		b_check_mode_on:=FALSE;
		b_Condition:=FALSE;
		n_Step:=10;
	END_IF
END_IF

// ****************************************
// Timer
// ****************************************
t_CP1_Check_Time(
	IN:=n_Step=25,
	PT:=t_check_duration);

// ****************************************
// Reset
// ****************************************
IF NOT b_check_mode_on THEN
  //
  // Rest step chain
  n_Step:=0;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="P_CP1_Check">
      <LineId Id="265" Count="134" />
      <LineId Id="100" Count="0" />
      <LineId Id="200" Count="0" />
      <LineId Id="94" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>